Fixed height issue on Firefox, merging

--- a/zm_app/public/css/style.css
+++ b/zm_app/public/css/style.css
@@ -8,7 +8,7 @@ body, html {
 }
 .wrapper {
   min-height: 100%;
-  height: auto !important;
+  /*height: auto !important;*/
   height: 100%;
   margin: 0 auto -55px; /* the bottom margin is the negative value of the footer's height */
 }
